--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
     "mocha": "^7.2.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2",
     "web3": "^1.3.6"
   },
   "dependencies": {
